@@ -1,54 +1,0 @@
-/*
- * Licensed to the Apache Software Foundation (ASF) under one or more
- * contributor license agreements.  See the NOTICE file distributed with
- * this work for additional information regarding copyright ownership.
- * The ASF licenses this file to You under the Apache License, Version 2.0
- * (the "License"); you may not use this file except in compliance with
- * the License.  You may obtain a copy of the License at
- *
- *     http://www.apache.org/licenses/LICENSE-2.0
- *
- * Unless required by applicable law or agreed to in writing, software
- * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
- * See the License for the specific language governing permissions and
- * limitations under the License.
- */
-package org.apache.solr.search.facet;
-
-import java.io.IOException;
-
-import org.apache.lucene.queries.function.ValueSource;
-
-public class MinAgg extends SimpleAggValueSource {
-  public MinAgg(ValueSource vs) {
-    super("min", vs);
-  }
-
-  @Override
-  public SlotAcc createSlotAcc(FacetContext fcontext, int numDocs, int numSlots) throws IOException {
-    return new MinSlotAcc(getArg(), fcontext, numSlots);
-  }
-
-  @Override
-  public FacetMerger createFacetMerger(Object prototype) {
-    return new Merger();
-  }
-
-  private static class Merger extends FacetDoubleMerger {
-    double val = Double.NaN;
-
-    @Override
-    public void merge(Object facetResult, Context mcontext) {
-      double result = ((Number)facetResult).doubleValue();
-      if (result < val || Double.isNaN(val)) {
-        val = result;
-      }
-    }
-
-    @Override
-    protected double getDouble() {
-      return val;
-    }
-  }
-}
